# glassbox

./: .gitignore  Cargo.toml  LICENSE  README.md
agents/: safety.t.md
docs/: USAGE.md
evals/: benign.txt  destructive.txt  destructive_obfuscated.txt
integrations/github-action/: action.yml  report.sh
integrations/github-action/examples/: governance-check.yml
integrations/vscode/: package.json
integrations/vscode/src/: api.ts  extension.ts
mcp/: glassbox_mcp.py
sdks/js/: package.json
sdks/js/src/: index.ts
sdks/python/: pyproject.toml
sdks/python/glassbox/: __init__.py  client.py  middleware.py
src/: audit.rs  card.rs  eval.rs  gate.rs  main.rs  mode.rs  protocol.rs  provenance.rs  safety.rs  values.rs  watch.rs
src/fleet/: app.rs  input.rs  mod.rs  ui.rs
src/web/: api.rs  db.rs  mod.rs
src/web/static/: dashboard.html
tests/: hook_golden.rs
tests/fixtures/: bash_force_push.json  bash_rm_rf.json  bash_safe_commit.json  read_readme.json  write_etc_passwd.json
