[package]
name = "glassbox"
version = "0.1.0"
edition = "2021"
description = "The Glass Box — a governance trust-layer that makes an agent's actions legible and governed at the moment they happen."
license = "MIT"

[dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }
ratatui = "0.29"
crossterm = "0.28"
chrono = "0.4"
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
hex = "0.4"

[[bin]]
name = "glassbox"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
